deployment/deployment-kubernetes-app.yaml
# deployment/deployment-kubernetes-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kubernetes-app
  labels:
    app: kubernetes-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubernetes-app
  template:
    metadata:
      labels:
        app: kubernetes-app
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: myapp-config
      containers:
      - name: kubernetes-app
        image: registry.hub.docker.com/kathlon/kube-app-demo:v0.6.1
        ports:
        - containerPort: 8000
          name: http
        livenessProbe:
          httpGet: 
            path: /healthz
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8000
          initialDelaySeconds: 3
          periodSeconds: 5
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
