deployment/kubernetes-app-prom-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kubernetes-app
  name: kubernetes-app-prom
spec:
  ports:
  - name: metrics
    port: 9001
    protocol: TCP
    targetPort: 9001
  selector:
    app: kubernetes-app
  type: ClusterIP
