deployment/ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubenertes-app-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kubernetes-app-aur.nip.io
    http:
      paths:
      - path: /
        backend:
          serviceName: kubernetes-app
          servicePort: 8000
